--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
+  <canvas id="playingField"></canvas>
 </body>
 </html>
