--- a/home.html
+++ b/home.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Battleships</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <canvas id="playingField"></canvas>
+  <div id="content">
+  </div>
 </body>
 </html>
