--- a/home.html
+++ b/home.html
@@ -7,7 +7,32 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  <div id="content">
+  <div class="container">
+    <button id="newGame">New Game</button>
   </div>
+  <h2 class="whoseTurn">It is X's turn</h2>
+  <table>
+    <thead>
+      <tr>
+        <!-- <td data-num="0"></td>
+        <td data-num="1"></td>
+        <td data-num="2"></td> -->
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <!-- <td data-num="3"></td>
+        <td data-num="4"></td>
+        <td data-num="5"></td> -->
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <!-- <td data-num="6"></td>
+        <td data-num="7"></td>
+        <td data-num="8"></td> -->
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
