Selected cells array

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <button id="newGame">New Game</button>
   </div>
   <h2 class="whoseTurn">Place your ships</h2>
-  <table>
+  <table id="playerBoard">
     <tbody>
     </tbody>
   </table>
