--- a/home.html
+++ b/home.html
@@ -3,18 +3,20 @@
 <head>
   <title>Battleships</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="scripts/jquery.transform.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
   <div class="container">
     <button id="newGame">New Game</button>
+    <button id="startGame">Start Game</button>
   </div>
   <h2 class="whoseTurn">Place your ships</h2>
   <table id="playerBoard">
     <tbody>
     </tbody>
   </table>
-  <button id="startGame">Start Game</button>
 </body>
 </html>
