changed theme to cats, added image

--- a/home.html
+++ b/home.html
@@ -12,11 +12,26 @@
   <div class="container">
     <button id="newGame">New Game</button>
     <button id="startGame">Start Game</button>
+    <button id="instructions">How to Play</button>
+    <h2 class="whoseTurn">Place your cats</h2>
+    <div class="gameSection">
+      <table id="playerOneDefBoard">
+        <tbody>
+        </tbody>
+      </table>
+      <table id="playerOneAtkBoard">
+        <tbody>
+        </tbody>
+      </table>
+      <table id="playerTwoDefBoard">
+        <tbody>
+        </tbody>
+      </table>
+      <table id="playerTwoAtkBoard">
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <h2 class="whoseTurn">Place your ships</h2>
-  <table id="playerBoard">
-    <tbody>
-    </tbody>
-  </table>
 </body>
 </html>
