Cleanup, added force reload on end-game

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript" src="scripts/jquery.transform.js"></script>
-  <script src="./js/soundmanager2.js"></script>
+  <script src="./scripts/soundmanager2.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <h1>Battle Cats</h1>
-    <div class="menu-buttons">
+    <div id="menu-buttons" class="menu-buttons">
       <button id="newGame">New Game</button>
       <button id="startGame">Start Game</button>
       <button id="instructions">How to Play</button>
