--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <title>BattleCats</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <!-- // <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
   <script type="text/javascript" src="scripts/jquery.transform.js"></script>
   <script src="./scripts/soundmanager2.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
