--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
   <title>BattleCats</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="scripts/jquery.transform.js"></script>
+  <!-- // <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script> -->
   <script src="./scripts/soundmanager2.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
