--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript" src="scripts/jquery.transform.js"></script>
-  <!-- // <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script> -->
+  <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
   <script src="./scripts/soundmanager2.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
